Sewwt cover images with permission of Lada
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65520 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -56,21 +56,22 @@
 %-half title--------------------------------------------------
 \thispagestyle{empty}
 
-\begin{flushright}
-\vspace*{2.0in}
+\centerline{\includegraphics[height=7.00in]{cover/cover.eps}}
 
-\begin{spacing}{3}
-{\huge Python for Informatics}\\
-{\Large Exploring Information}\\
-\end{spacing}
+% \begin{flushright}
+% \vspace*{2.0in}
+% \begin{spacing}{3}
+% {\huge Python for Informatics}\\
+% {\Large Exploring Information}\\
+% \end{spacing}
 
-\vspace{0.25in}
+% \vspace{0.25in}
 
-Version \theversion
+% Version \theversion
 
-\vfill
+% \vfill
 
-\end{flushright}
+% \end{flushright}
 
 %--verso------------------------------------------------------
 
@@ -181,6 +182,8 @@ The \LaTeX\ source for the
 version of the book is available (for the moment) from 
 \url{http://source.sakaiproject.org/contrib//csev/trunk/pyinf/}.
 
+The cover images were provided by Dr. Lada Adamic and are used
+with permission.
 \vspace{0.2in}
 
 } % end small
