Typo fixed thanks to Sarah Hegge
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65522 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -607,7 +607,7 @@ They are all of the ways we interact with the computer.
 \item These days, most computers also have a
 {\bf Network Connection} to retrieve information over a network.
 We can think of the network as a very slow place to store and
-retrieve data that might now always be "up".  So in a sense,
+retrieve data that might not always be "up".  So in a sense,
 the network is a slower and at times unreliable form of
 {\bf Secondary Memory}
 
@@ -10106,7 +10106,8 @@ work.  The goal is to learn how to make the program work.
 \chapter{Contributor List}
 \section*{Contributor List for ``Python for Informatics''}
 
-Bruce Shields for copy editing early drafts.
+Bruce Shields for copy editing early drafts,
+Sarah Hegge for catching errors,
 
 \section*{Contributor List for ``Think Python''}
 
