--- a/fdl-1.3.tex
+++ b/fdl-1.3.tex
@@ -1,28 +1,7 @@
-% This is set up to run with pdflatex.
-%---------The file header---------------------------------------------
-\documentclass[a4paper,12pt]{book}
-
-\usepackage[english]{babel} %language selection
-\selectlanguage{english}
-
-\pagenumbering{arabic}
-
-\usepackage{hyperref}
-\hypersetup{colorlinks, 
-           citecolor=black,
-           filecolor=black,
-           linkcolor=black,
-           urlcolor=black,
-           bookmarksopen=true,
-           pdftex}
-
-\hfuzz = .6pt % avoid black boxes
-           
-\begin{document}
 %---------------------------------------------------------------------
-\chapter*{\rlap{GNU Free Documentation License}}
-\phantomsection  % so hyperref creates bookmarks
-\addcontentsline{toc}{chapter}{GNU Free Documentation License}
+\chapter{GNU Free Documentation License}
+% \phantomsection  % so hyperref creates bookmarks
+% \addcontentsline{toc}{chapter}{GNU Free Documentation License}
 %\label{label_fdl}
 
  \begin{center}
@@ -71,8 +50,8 @@ principally for works whose purpose is instruction or reference.
 
 \begin{center}
 {\Large\bf 1. APPLICABILITY AND DEFINITIONS\par}
-\phantomsection
-\addcontentsline{toc}{section}{1. APPLICABILITY AND DEFINITIONS}
+% % \phantomsection
+% % \addcontentsline{toc}{section}{1. APPLICABILITY AND DEFINITIONS}
 \end{center}
 
 This License applies to any manual or other work, in any medium, that
@@ -166,8 +145,8 @@ no effect on the meaning of this License.
 
 \begin{center}
 {\Large\bf 2. VERBATIM COPYING\par}
-\phantomsection
-\addcontentsline{toc}{section}{2. VERBATIM COPYING}
+% \phantomsection
+% \addcontentsline{toc}{section}{2. VERBATIM COPYING}
 \end{center}
 
 You may copy and distribute the Document in any medium, either
@@ -186,8 +165,8 @@ you may publicly display copies.
 
 \begin{center}
 {\Large\bf 3. COPYING IN QUANTITY\par}
-\phantomsection
-\addcontentsline{toc}{section}{3. COPYING IN QUANTITY}
+% \phantomsection
+% \addcontentsline{toc}{section}{3. COPYING IN QUANTITY}
 \end{center}
 
 
@@ -229,8 +208,8 @@ them a chance to provide you with an updated version of the Document.
 
 \begin{center}
 {\Large\bf 4. MODIFICATIONS\par}
-\phantomsection
-\addcontentsline{toc}{section}{4. MODIFICATIONS}
+% \phantomsection
+% \addcontentsline{toc}{section}{4. MODIFICATIONS}
 \end{center}
 
 You may copy and distribute a Modified Version of the Document under
@@ -349,8 +328,8 @@ imply endorsement of any Modified Version.
 
 \begin{center}
 {\Large\bf 5. COMBINING DOCUMENTS\par}
-\phantomsection
-\addcontentsline{toc}{section}{5. COMBINING DOCUMENTS}
+% \phantomsection
+% \addcontentsline{toc}{section}{5. COMBINING DOCUMENTS}
 \end{center}
 
 
@@ -378,8 +357,8 @@ Entitled ``Endorsements''.
 
 \begin{center}
 {\Large\bf 6. COLLECTIONS OF DOCUMENTS\par}
-\phantomsection
-\addcontentsline{toc}{section}{6. COLLECTIONS OF DOCUMENTS}
+% \phantomsection
+% \addcontentsline{toc}{section}{6. COLLECTIONS OF DOCUMENTS}
 \end{center}
 
 You may make a collection consisting of the Document and other documents
@@ -396,8 +375,8 @@ other respects regarding verbatim copying of that document.
 
 \begin{center}
 {\Large\bf 7. AGGREGATION WITH INDEPENDENT WORKS\par}
-\phantomsection
-\addcontentsline{toc}{section}{7. AGGREGATION WITH INDEPENDENT WORKS}
+% \phantomsection
+% \addcontentsline{toc}{section}{7. AGGREGATION WITH INDEPENDENT WORKS}
 \end{center}
 
 
@@ -421,8 +400,8 @@ aggregate.
 
 \begin{center}
 {\Large\bf 8. TRANSLATION\par}
-\phantomsection
-\addcontentsline{toc}{section}{8. TRANSLATION}
+% \phantomsection
+% \addcontentsline{toc}{section}{8. TRANSLATION}
 \end{center}
 
 
@@ -447,8 +426,8 @@ title.
 
 \begin{center}
 {\Large\bf 9. TERMINATION\par}
-\phantomsection
-\addcontentsline{toc}{section}{9. TERMINATION}
+% \phantomsection
+% \addcontentsline{toc}{section}{9. TERMINATION}
 \end{center}
 
 
@@ -480,8 +459,8 @@ not give you any rights to use it.
 
 \begin{center}
 {\Large\bf 10. FUTURE REVISIONS OF THIS LICENSE\par}
-\phantomsection
-\addcontentsline{toc}{section}{10. FUTURE REVISIONS OF THIS LICENSE}
+% \phantomsection
+% \addcontentsline{toc}{section}{10. FUTURE REVISIONS OF THIS LICENSE}
 \end{center}
 
 
@@ -507,8 +486,8 @@ Document.
 
 \begin{center}
 {\Large\bf 11. RELICENSING\par}
-\phantomsection
-\addcontentsline{toc}{section}{11. RELICENSING}
+% \phantomsection
+% \addcontentsline{toc}{section}{11. RELICENSING}
 \end{center}
 
 
@@ -542,8 +521,8 @@ provided the MMC is eligible for relicensing.
 
 \begin{center}
 {\Large\bf ADDENDUM: How to use this License for your documents\par}
-\phantomsection
-\addcontentsline{toc}{section}{ADDENDUM: How to use this License for your documents}
+% \phantomsection
+% \addcontentsline{toc}{section}{ADDENDUM: How to use this License for your documents}
 \end{center}
 
 To use this License in a document you have written, include a copy of
