Switch the copyright from GFDL to CC-BY-SA with permission from Allen B. Downey.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65647 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -2,16 +2,12 @@
 % Copyright (c)  2009  Charles R. Severance
 
 % Permission is granted to copy, distribute and/or modify this
-% document under the terms of the GNU Free Documentation License,
-% Version 1.1  or any later version published by the Free Software
-% Foundation; with no Invariant Sections, no Front-Cover Texts,
-% and no Back-Cover Texts.
+% document under the terms of the 
+% 
+% Creative Commons Attribtion 3.0 - Share Alike Unported
+% (or a later CC-SA) license
 
-% This distribution includes a file named fdl.tex that contains the text
-% of the GNU Free Documentation License.  If it is missing, you can obtain
-% it from www.gnu.org or by writing to the Free Software Foundation,
-% Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-%
+% http://creativecommons.org/licenses/by-sa/3.0/
 
 %\documentclass[10pt,b5paper]{book}
 \documentclass[10pt]{book}
@@ -30,7 +26,7 @@
 \usepackage{upquote}
 
 \newcommand{\thetitle}{Python for Informatics: Exploring Information}
-\newcommand{\theversion}{0.0.2}
+\newcommand{\theversion}{0.0.3}
 
 \makeindex
 
@@ -98,7 +94,7 @@
 
 Version \theversion
 
-\vspace{1in}
+\vspace{0.5in}
 
 
 {\Large
@@ -106,13 +102,9 @@ Charles Severance\\
 }
 
 
-% \vspace{0.5in}
+\vspace{2.5in}
 
-% {\Large Green Tea Press}
-
-% {\small Needham, Massachusetts}
-
-%\includegraphics[width=1in]{figs/logo1.eps}
+\centerline{\includegraphics[width=1in]{figs2/by-sa.eps}}
 \vfill
 
 \end{flushright}
@@ -157,14 +149,10 @@ a Computer Scientist}.
 % Needham MA 02492
 % \end{flushleft}
 
-Permission is granted to copy, distribute, and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, no Front-Cover Texts, and with no Back-Cover Texts.
-
-The GNU Free Documentation License is available from {\tt www.gnu.org}
-or by writing to the Free Software Foundation, Inc., 59 Temple Place,
-Suite 330, Boston, MA 02111-1307, USA.
+This work is licensed under a 
+Creative Commons Attribution-Share Alike 3.0 Unported License.  This license is 
+available at
+\url{creativecommons.org/licenses/by-sa/3.0/}.
 
 The original form of this book is \LaTeX\ source code.  Compiling this
 \LaTeX\ source has the effect of generating a device-independent
@@ -240,18 +228,15 @@ to write just such a book.  Luckily at a faculty meeting three weeks
 before I was about to start my new book from scratch over 
 the holiday break, 
 Dr. Atul Prakash showed me the {\em Think Python} book which he had
-used to teach his Python course that semester.
-
-{\em Think Python} follows the structure of most introductory Computer
-Science textbooks.  It is a well-written text with a focus on 
+used to teach his Python course that semester.  
+It is a well-written COmputer Science text with a focus on 
 short, direct explanations and ease of learning.  
 
-The book was available under the 
-GNU Free Documentation License 
-so I had all the permission I needed
-to use the book as the base material for my book.  As a courtesy, 
-I sent a note to Allen and Cambridge Press letting them know what I 
-was about to do to their book.
+Allen has given me permission to license the book under 
+Creative Commons Attribution - Share Alike.  Using CC-BY-SA
+maintains the book's strong copyleft tradition while making it 
+even more straighforward for new authors to reuse this material 
+as they see fit.
 
 I expect that by the time I am done with {\em Python for Informatics} 
 over fifty percent of the book will be new.  The overall structure
@@ -10230,8 +10215,6 @@ and
 Paul Stoop.
 
 % ENDCONTRIB
-
-\input{fdl-1.3.tex}
 
 \normalsize
 
