--- a/book.tex
+++ b/book.tex
@@ -229,14 +229,21 @@ before I was about to start my new book from scratch over
 the holiday break, 
 Dr. Atul Prakash showed me the {\em Think Python} book which he had
 used to teach his Python course that semester.  
-It is a well-written COmputer Science text with a focus on 
+It is a well-written Computer Science text with a focus on 
 short, direct explanations and ease of learning.  
 
-Allen has given me permission to license the book under 
-Creative Commons Attribution - Share Alike.  Using CC-BY-SA
-maintains the book's strong copyleft tradition while making it 
-even more straighforward for new authors to reuse this material 
-as they see fit.
+As the coyright holder of {\em Think Python},
+Allen has given me permission to change the book's license 
+from the
+GNU Free Documentation License 
+to the more recent
+Creative Commons Attribution - Share Alike
+license.
+This follows a general shift in open documentation licenses moving 
+from the GFDL to the CC-BY-SA (i.e. Wikipedia).
+Using the CC-BY-SA license maintains the book's 
+strong copyleft tradition while making it even more straighforward 
+for new authors to reuse this material as they see fit.
 
 I expect that by the time I am done with {\em Python for Informatics} 
 over fifty percent of the book will be new.  The overall structure
