Add index entries.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65650 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -232,6 +232,10 @@ used to teach his Python course that semester.
 It is a well-written Computer Science text with a focus on 
 short, direct explanations and ease of learning.  
 
+\index{Creative Commons License}
+\index{CC-BY-SA}
+\index{BY-SA}
+
 As the coyright holder of {\em Think Python},
 Allen has given me permission to change the book's license 
 from the
