Typo from Allen.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65651 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -491,7 +491,7 @@ Our computers are fast and have vasts amounts of memory and
 could be very helpful to us if we only knew the language to
 speak to explain to the computer what we would like it to 
 ``do next''.  If we knew this language we could tell the 
-computer to do tasks on our behalf that were reptitive.  
+computer to do tasks on our behalf that were repetitive.  
 Interestingly, the kinds of things computers can do best
 are often the kinds of things that we humans find boring
 and mind-numbing.
