Fix spelling errors - thanks to Excalibur
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65653 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -4,7 +4,7 @@
 % Permission is granted to copy, distribute and/or modify this
 % document under the terms of the 
 % 
-% Creative Commons Attribtion 3.0 - Share Alike Unported
+% Creative Commons Attribution 3.0 - Share Alike Unported
 % (or a later CC-SA) license
 
 % http://creativecommons.org/licenses/by-sa/3.0/
@@ -220,7 +220,7 @@ skills using Python.  Few of my
 students were planning to be be professional 
 computer programmers.  Instead, they
 planned be librarians, managers, lawyers, biologists, economists, etc. 
-who happenned to want to skillfully use technology in their chosen field.
+who happened to want to skillfully use technology in their chosen field.
 
 I never seemed to find the perfect data-oriented Python
 book for my course so I set out 
@@ -236,7 +236,7 @@ short, direct explanations and ease of learning.
 \index{CC-BY-SA}
 \index{BY-SA}
 
-As the coyright holder of {\em Think Python},
+As the copyright holder of {\em Think Python},
 Allen has given me permission to change the book's license 
 from the
 GNU Free Documentation License 
@@ -246,7 +246,7 @@ license.
 This follows a general shift in open documentation licenses moving 
 from the GFDL to the CC-BY-SA (i.e. Wikipedia).
 Using the CC-BY-SA license maintains the book's 
-strong copyleft tradition while making it even more straighforward 
+strong copyleft tradition while making it even more straightforward 
 for new authors to reuse this material as they see fit.
 
 I expect that by the time I am done with {\em Python for Informatics} 
@@ -256,7 +256,7 @@ possible and have a series of running examples and exercises
 about data analysis.
 Then I will add chapters on regular expressions, data
 visualization, working with spreadsheet data, structured 
-query launguage using SQLite, web scraping, and calling REST-based
+query language using SQLite, web scraping, and calling REST-based
 Application Program Interfaces.  
 
 The ultimate goal in the shift from a Computer Science to an Informatics
@@ -487,7 +487,7 @@ is essentially built to continuously ask us the question,
 \afterfig
 
 
-Our computers are fast and have vasts amounts of memory and 
+Our computers are fast and have vast amounts of memory and 
 could be very helpful to us if we only knew the language to
 speak to explain to the computer what we would like it to 
 ``do next''.  If we knew this language we could tell the 
@@ -829,7 +829,7 @@ repeatedly, usually with
 some variation.
 
 \item[reuse:] Write a set of instructions once and give them a name
-and then reuse those instructions as needed throuhgout your program.,
+and then reuse those instructions as needed throughout your program.,
 
 \end{description}
 
@@ -2076,8 +2076,8 @@ of the second program because the
 programmer has chosen variable names that reflect the intent of the programmer
 regarding what data will be stored in each variable.
 
-We call these wisely-chosen variable names ``menmonic variable names''.  The
-word {\em menmonic}\footnote{See 
+We call these wisely-chosen variable names ``mnemonic variable names''.  The
+word {\em mnemonic}\footnote{See 
 \url{http://en.wikipedia.org/wiki/Mnemonic}
 for an extended description of the word ``mnemonic''.} 
 means ``memory aid''.
@@ -2686,7 +2686,7 @@ It does not execute the following statement.
 \index{traceback}
 
 Here is a sample program to convert a Fahrenheit temperature 
-to a Celius temperature:
+to a Celsius temperature:
 \index{fahrenheit}
 \index{celsius}
 \index{temperature conversion}
@@ -2773,13 +2773,13 @@ of whether {\tt (x/y) > 2} evaluates to {\tt True} or {\tt False}.
 When Python detects that there is nothing to be gained by evaluating
 the rest of a logical expression, it stops its evaluation and does
 not do the computations in the rest of the logical expression.  
-When the evaulation of a logical expression stops because the overall
+When the evaluation of a logical expression stops because the overall
 value is already known, it is called {\bf short-circuiting} 
 the evaluation.
 
 \index{guardian pattern}
 \index{pattern!guardian}
-While this may seem like a fine point, the short curcuit behavior
+While this may seem like a fine point, the short circuit behavior
 leads to a clever technique called the {\bf guardian pattern}.  
 Consider the following code sequence in the Python interpreter:
 
@@ -3018,7 +3018,7 @@ Enter Hours: 20
 Enter Rate: nine
 Error, please enter numeric input
 
-Enter Hours: fourty
+Enter Hours: forty
 Error, please enter numeric input
 \end{verbatim}
 \end{ex}
@@ -4337,7 +4337,7 @@ If you think about the variable {\tt total}, it contains the
 ``running total of the values so far''.  So before the loop
 starts {\tt total} is zero because we have not yet seen any values,
 during the loop {\tt total} is the running total, and at the end of 
-the loop {\tt total} is the overal total of all the values 
+the loop {\tt total} is the overall total of all the values 
 in the list.
 
 As the loop executes, {\tt total} accumulates the sum of the
@@ -4389,7 +4389,7 @@ Largest: 74
 %
 The variable {\tt largest} is best thought of as 
 the ``largest value we have seen so far''.
-Before the loop, we set {\tt largest} to the contstant {\tt None}.  
+Before the loop, we set {\tt largest} to the constant {\tt None}.  
 {\tt None} is a special constant value which we can 
 store in a variable to mark 
 the variable as ``empty''.  
@@ -4518,7 +4518,7 @@ either a recursive function call or a loop.
 \index{iteration}
 
 \item[counter:] A variable used in a loop to count the number
-of times something happenned.  We initialize a counter to 
+of times something happened.  We initialize a counter to 
 zero and then increment the counter each time we want to
 ``count'' something.
 \index{counter}
@@ -5230,8 +5230,8 @@ False
 \end{verbatim}
 \afterverb
 %
-You will note that {\tt startswith} requres case to match so sometimes
-we take a line ane map it all to lower case before we do any checking
+You will note that {\tt startswith} requires case to match so sometimes
+we take a line and map it all to lower case before we do any checking
 using the {\tt lower} method.
 
 \beforeverb
@@ -5467,7 +5467,7 @@ which returns {\tt False} if the string is empty.
 %
 \index{guardian pattern}
 \index{pattern!guardian}
-Another way to safely write the if statment using the {\bf guardian}
+Another way to safely write the if statement using the {\bf guardian}
 pattern and make sure the second logical expression is evaluated 
 only where there is at least one character in the string.:
 
@@ -5852,7 +5852,7 @@ system and transported to another system.
 
 We will primarily focus on reading and writing text files such as 
 those we create in a text editor.  Later we will see how to work
-with database files which are binary files, specificially designed to be read
+with database files which are binary files, specifically designed to be read
 and written through database software.
 
 \section{Opening files}
@@ -5932,7 +5932,7 @@ represents the ``end of the line'' called the {\bf newline} character.
 \index{newline}
 In Python, we represent the {\bf newline} character as a backslash-n in 
 string constants.  Even though this looks like two characters, it
-is actually a single character.  When we look at the varible by entering
+is actually a single character.  When we look at the variable by entering
 ``stuff'' in the interpreter, it shows us the \verb"\n" in the string, 
 but when we use {\tt print} to show the string, we see the string broken
 into two lines by the newline character.
@@ -6063,7 +6063,7 @@ to build simple search mechanisms.
 \index{filter pattern}
 \index{pattern!filter}
 For example, if we wanted to read a file and only print out lines
-which started with the prefis ``From:'', we could use the 
+which started with the prefix ``From:'', we could use the 
 string method {\bf startswith} to select only those lines with
 the desired prefix:
 
@@ -6156,9 +6156,9 @@ with ``From:'', which we skip using {\tt continue}.
 For the ``interesting'' lines (i.e. those that start with ``From:'')
 we perform the processing on those lines.
 
-We can use the {\tt find} string method to simiulate a text editor
+We can use the {\tt find} string method to simulate a text editor
 search which finds lines where the search string is anywhere in the line.  
-Since {\tt find} looks for an occurance of a string within another
+Since {\tt find} looks for an occurrence of a string within another
 string and either returns the position of the string or -1 if the string
 was not found, we can write the following loop to show lines which
 contain the string ``@uct.ac.za'' (i.e. they come from the University 
@@ -6224,7 +6224,7 @@ The {\tt split} method reads through the string and returns a
 list of strings representing each {\bf token} in the string.
 We store this list of words in a mnemonically-named variable
 called {\tt words}.  Using the {\tt len} function, we see that
-splitting the string yeilded four words and the third word 
+splitting the string yielded four words and the third word 
 ({\tt word[2]}) is ``nice''.
 
 So we can write a small program that looks for lines where the 
@@ -6333,7 +6333,7 @@ IOError: [Errno 2] No such file or directory: 'na na boo boo'
 \afterverb
 %
 Do not laugh, users will eventually do every possible thing they can do 
-to break your programs --- either on purpose or with mailcious intent.
+to break your programs --- either on purpose or with malicious intent.
 As a matter of fact, an important part of any software development
 team is a person or group called {\bf Quality Assurance} (or QA for short)
 whose very job it is to do the craziest things possible in an attempt
@@ -6602,7 +6602,7 @@ for line in fhand:
 %
 When we run the program, a lot of output scrolls off the screen
 but at the end, we see our debug output and the traceback so 
-we know what happenned just before the traceback.
+we know what happened just before the traceback.
 
 \beforeverb
 \begin{verbatim}
@@ -6705,12 +6705,12 @@ and {\tt except} statements.
 
 \item[Quality Assurance:] A person or team focused on insuring the 
 overall quality of a software product.  QA is often involved 
-in testing a product and identifying ptoblems before the product 
+in testing a product and identifying problems before the product 
 is released.
 \index{Quality Assurance}
 \index{QA}
 
-\item[Pythonic:] A techinque that works elegantly in Python.
+\item[Pythonic:] A technique that works elegantly in Python.
 ``Using try and except is the {\em Pythonic} way to recover from 
 missing files.''.
 \index{Pythonic}
@@ -8163,7 +8163,7 @@ should be able to eliminate the {\tt if} statement.
 
 \section{Dictionaries and files}
 
-One of the common uses of a dictionary is to count the occurance
+One of the common uses of a dictionary is to count the occurrence
 of words in a file with some written text.  
 Lets start with a very simple file of
 words taken from the text of {\em Romeo and Juliet}
@@ -8244,7 +8244,7 @@ Enter the file name: romeo.txt
 \end{verbatim}
 \afterverb
 %
-It is a bit inconvienent to look through the dictionary to find the
+It is a bit inconvenient to look through the dictionary to find the
 most common words and their counts, so we need to add some more 
 Python code to get us the output that will be more helpful.
 
@@ -8420,7 +8420,7 @@ a': 24, 'orchard': 2, 'light': 5, 'lovers': 2, 'romeo': 40,
 \end{verbatim}
 \afterverb
 %
-Looking through this output is still unweildy and we can use
+Looking through this output is still unwieldy and we can use
 Python to gives us exactly what we are looking for, but to do 
 so, we need to learn about Python {\bf tuples}.  We
 will pick up this example once we learn about tuples.
@@ -8576,7 +8576,7 @@ zqian@umich.edu 195
 
 \begin{ex}
 This program records the domain name (instead of the address) 
-where the message was sent from insead of who the mail 
+where the message was sent from instead of who the mail 
 came from (i.e. the whole e-mail address). At the end 
 of the program print out the contents of your dictionary. 
 
@@ -8869,7 +8869,7 @@ it will not work as might expect.}
 \afterverb
 
 Stylistically when we use a tuple on the left hand side of the assignment
-statement, we omit the prarenthesis, but the following is equally 
+statement, we omit the parentheses, but the following is equally 
 valid syntax:
 
 \beforeverb
@@ -9130,7 +9130,7 @@ Because tuples are {\bf hashable} and lists are not hashable, if we want to
 create a {\bf composite} key to use in a dictionary we must use a tuple as
 the key.
 
-We would enounter a composite key if we wanted to create a 
+We would encounter a composite key if we wanted to create a 
 telephone directory that maps
 from last-name, first-name pairs to telephone numbers.  Assuming
 that we have defined the variables 
